lib: airflow, api: rest: Insert workflow contents into data
