# pkg/api/rest/docs/swagger.json
@@ -428,6 +428,23 @@
                 }
             }
         },
+        "github_com_cloud-barista_cm-cicada_pkg_api_rest_model.Data": {
+            "type": "object",
+            "properties": {
+                "default_args": {
+                    "$ref": "#/definitions/github_com_cloud-barista_cm-cicada_pkg_api_rest_model.DefaultArgs"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "task_groups": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_cloud-barista_cm-cicada_pkg_api_rest_model.TaskGroup"
+                    }
+                }
+            }
+        },
         "github_com_cloud-barista_cm-cicada_pkg_api_rest_model.DefaultArgs": {
             "type": "object",
             "properties": {
@@ -507,21 +524,26 @@
         },
         "github_com_cloud-barista_cm-cicada_pkg_api_rest_model.Workflow": {
             "type": "object",
+            "required": [
+                "data",
+                "id",
+                "name"
+            ],
             "properties": {
-                "default_args": {
-                    "$ref": "#/definitions/github_com_cloud-barista_cm-cicada_pkg_api_rest_model.DefaultArgs"
-                },
-                "description": {
+                "created_at": {
                     "type": "string"
+                },
+                "data": {
+                    "$ref": "#/definitions/github_com_cloud-barista_cm-cicada_pkg_api_rest_model.Data"
                 },
                 "id": {
                     "type": "string"
                 },
-                "task_groups": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/github_com_cloud-barista_cm-cicada_pkg_api_rest_model.TaskGroup"
-                    }
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
